[package]
name = "ylva"
version = "0.1.0"
edition = "2024"
description = "Ylva integrates with YNAB and lets you automate actions"
authors = ["Eleanor Young <developer@nausicaea.net>"]

[dependencies]
anyhow = "^1.0.0"
clap = { version = "^4.0.0", features = ["derive"] }
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
thiserror = "^2.0.0"
tracing = "^0.1.40"
tracing-subscriber = { version = "^0.3.18", features = ["env-filter"] }
