[package]
name = "ylva"
version = "0.1.0"
edition = "2024"
description = "Ylva integrates with YNAB and lets you automate actions"
authors = ["Eleanor Young <developer@nausicaea.net>"]

[dependencies]
anyhow = "^1.0.0"
chrono = "0.4.41"
clap = { version = "^4.0.0", features = ["derive"] }
directories = "6.0.0"
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
serde_yaml = "0.9.34"
thiserror = "^2.0.0"
tokio = { version = "^1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "^0.1.40"
tracing-subscriber = { version = "^0.3.18", features = ["env-filter"] }
