[package]
name = "ylva"
version = "0.1.0"
edition = "2024"
description = "Ylva integrates with YNAB and lets you automate actions"
authors = ["Eleanor Young <developer@nausicaea.net>"]

[dependencies]
anyhow = "^1.0.0"
bitflags = "2.9.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "^4.0.0", features = ["derive"] }
directories = "6.0.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
serde_yaml = "0.9.34"
thiserror = "^2.0.0"
tokio = { version = "^1.36.0", features = ["rt", "rt-multi-thread", "macros", "process"] }
tracing = "^0.1.40"
tracing-subscriber = { version = "^0.3.18", features = ["env-filter"] }
url = "2.5.4"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
rand = "0.9.1"

[dev-dependencies]
rstest = "0.25.0"
