[tool.poetry]
name = "ylva"
version = "0.1.0"
description = "Ylva integrates with YNAB and lets you automate actions"
authors = ["Eleanor Young <developer@nausicaea.net>"]

[tool.poetry.scripts]
ylva = 'ylva.bin.ylva:main'

[tool.poetry.extras]
progress = ["tqdm"]

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^65.3.0"
mt-940 = "^4.26.0"
reidun = {git = "git@gitlab.com:nausicaea/reidun.git", branch = "main"}
aiohttp = "^3.8.1"
appdirs = "^1.4.4"
mashumaro = {version = "^3.0.4", extras = ["yaml"]}
tqdm = {version = "^4.64.1", optional = true}
ofxstatement = "^0.8.0"
ofxstatement-mt940 = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-asyncio = "^0.19.0"
flake8 = "^5.0.4"
flake8-isort = "^4.2.0"
isort = "^5.10.1"
black = "^22.6.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
