[tool.poetry]
name = "ylva"
version = "0.2.0"
description = "Ylva integrates with YNAB and lets you automate actions"
authors = ["Eleanor Young <developer@nausicaea.net>"]

[tool.poetry.scripts]
ylva = 'ylva.bin.ylva:main'

[tool.poetry.extras]
progress = ["tqdm"]

[tool.poetry.dependencies]
python = "^3.10"
mt-940 = "^4"
reidun = {git = "git@gitlab.com:nausicaea/reidun.git", tag = "v0.5.9"}
aiohttp = "^3"
appdirs = "^1"
mashumaro = {version = "^3", extras = ["yaml"]}
tqdm = {version = "^4", optional = true}

[tool.poetry.dev-dependencies]
pytest = "8"
pytest-asyncio = "0.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
